# recon

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
e2e-output/output/: audit-log.jsonl  final-report.md
e2e-output/research/: general-general-investigation.md
e2e-output/verification/: audit-trail.jsonl  report.md
examples/: advanced.yaml  e2e-test.yaml  simple.yaml  verify-only.yaml
src/recon/: __init__.py  cli.py  config.py  db.py  flow_builder.py
src/recon/callbacks/: __init__.py  audit.py  progress.py
src/recon/context/: __init__.py  strategy.py
src/recon/crews/: __init__.py
src/recon/crews/investigation/: __init__.py  crew.py
src/recon/crews/investigation/config/: agents.yaml  tasks.yaml
src/recon/crews/synthesis/: __init__.py  crew.py
src/recon/crews/synthesis/config/: agents.yaml  tasks.yaml
src/recon/crews/verification/: __init__.py  crew.py
src/recon/crews/verification/config/: agents.yaml  tasks.yaml
src/recon/flows/: __init__.py  research_flow.py
src/recon/memory/: __init__.py  store.py
src/recon/providers/: __init__.py  llm.py  search.py
src/recon/templates/: competitive-analysis.yaml  market-research.yaml  opportunity-finder.yaml  technical-landscape.yaml
src/recon/tools/: __init__.py  _helpers.py  citation_verifier.py  claim_extractor.py  confidence_scorer.py  contradiction_detector.py  semantic_verifier.py  source_extractor.py  source_tracker.py
tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_db.py  test_flow.py  test_memory.py  test_providers.py  test_templates.py  test_tools.py
