[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-ai"
version = "0.1.0"
description = "Verified research pipelines powered by AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Recon Contributors"},
]
keywords = ["ai", "research", "agents", "fact-checking", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "crewai[tools]>=1.9",
    "tavily-python>=0.5",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
]

[project.scripts]
recon = "recon.cli:app"

[project.optional-dependencies]
memory = [
    "memvid-sdk>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "pyright>=1.1",
]
all = [
    "recon-ai[memory]",
]

[project.urls]
Homepage = "https://github.com/paulofcardoso/recon"
Repository = "https://github.com/paulofcardoso/recon"
Issues = "https://github.com/paulofcardoso/recon/issues"
Changelog = "https://github.com/paulofcardoso/recon/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
recon = ["templates/*.yaml", "py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
